--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,18 +1,46 @@
 <div class="container d-flex justify-content-center align-items-center vh-100">
     <div class="card p-4 shadow" style="min-width: 350px; max-width: 400px; width: 100%;">
         <h2 class="text-center mb-4">Login</h2>
-        <form>
+
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
             <div class="mb-3">
-                <label for="email" class="form-label">Email address</label>
-                <input type="email" id="email" class="form-control" placeholder="Enter email" required />
+                <label for="email" class="form-label">Email address <strong class="text-danger">*</strong></label>
+                <input type="email" id="email" class="form-control" placeholder="Enter email" formControlName="email"
+                    [class.is-invalid]="getEmail.invalid && getEmail.touched">
+
+                @if (getEmail.touched && getEmail.invalid) {
+                <div class="invalid-feedback">
+                    @if (getEmail.hasError('required')) {
+                    <div>Email is required</div>
+                    }
+                    @if (getEmail.hasError('email')) {
+                    <div>Please enter a valid email</div>
+                    }
+                </div>
+                }
             </div>
 
             <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" id="password" class="form-control" placeholder="Enter password" required />
+                <label for="password" class="form-label">Password <strong class="text-danger">*</strong></label>
+                <input type="password" id="password" class="form-control" placeholder="Enter password"
+                    formControlName="password" [class.is-invalid]="getPassword.invalid && getPassword.touched">
+
+                @if (getPassword.touched && getPassword.invalid) {
+                <div class="invalid-feedback">
+                    @if (getPassword.hasError('required')) {
+                    <div>Password is required</div>
+                    }
+                </div>
+                }
             </div>
 
-            <button type="submit" class="btn btn-primary w-100">Login</button>
+            @if (errorMessage) {
+            <div class="alert alert-danger">{{ errorMessage }}</div>
+            }
+
+            <button type="submit" class="btn btn-primary w-100" [disabled]="loginForm.invalid">
+                Login
+            </button>
 
             <div class="mt-3 text-center">
                 Don't have an account? <a [routerLink]="['/register']">Register</a>
