--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-landing-section />
-<app-main />
+<app-shop-main />
 <app-pagination />
-<app-featuredguests />
+<app-featured-designers />
 <app-subscribe />
