--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="container pb-5 pt-2 border border-2 border-light-subtle mb-5 mt-3">
+<div class="container pb-4 pt-2 border border-2 border-light-subtle my-5">
     <h2 class="text-center fs-1 fw-bold fst-italic text-primary mt-4 mb-5">Our Products</h2>
     <div class="row mt-1 mb-5">
         <div class="col-md-3 text-center">
