--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,25 @@
-<nav class="navbar navbar-expand-lg py-4">
+<nav class="navbar navbar-expand-lg py-3 bg-body-tertiary">
     <div class="container">
-        <a class="navbar-brand" href="#">Podcast.</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" [routerLink]="['/home']">Clothes Store</a>
+        <div class="d-flex align-items-center">
+            <div class="d-lg-none position-relative me-4 px-3">
+                <a class="nav-link" style="cursor: pointer;" (click)="toggleCartDropdown()">
+                    <i class="bi bi-cart fs-5"></i>
+                    <span class="position-absolute start-100 translate-middle badge rounded-pill bg-danger">
+                        {{ cartService.getTotalItems() }}
+                    </span>
+                </a>
+                <div class="dropdown-menu p-3 mt-3" style="right: 0; min-width: 200px;"
+                    [ngClass]="{ 'show': showCartDropdown }">
+                    <p class="mb-2">Items in cart: {{ cartService.getTotalItems() }}</p>
+                    <a class="btn btn-primary btn-sm w-100" [routerLink]="['/cart']">Go to Cart</a>
+                </div>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -19,33 +34,46 @@
                         [routerLinkActiveOptions]="{ exact: true }">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="cursor: pointer;" [routerLink]="['/iti-tracks']"
-                        [routerLinkActive]="'text-danger rounded'" [routerLinkActiveOptions]="{ exact: true }">ITI
-                        Tracks</a>
+                    <a class="nav-link" style="cursor: pointer;" [routerLink]="['/shopCategory']"
+                        [routerLinkActive]="'text-danger rounded'" [routerLinkActiveOptions]="{ exact: true }">Shop Categories
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" style="cursor: pointer;" [routerLink]="['/todos']"
                         [routerLinkActive]="'text-danger rounded'" [routerLinkActiveOptions]="{ exact: true }">Todos</a>
                 </li>
-                <li class="nav-item dropdown">
-                    @if (currentUser) {
-                    <button class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{ currentUser.full_name }}
+                <li class="nav-item dropdown position-relative">
+                    <button class="nav-link dropdown-toggle" style="cursor: pointer;" (click)="toggleAccountDropdown()">
+                        {{ currentUser ? currentUser.full_name : 'Account' }}
                     </button>
-                    <ul class="dropdown-menu p-0 w-100 mt-2">
+                    <ul class="dropdown-menu p-0 w-100 mt-2 account-dropdown"
+                        [ngClass]="{ 'show': showAccountDropdown }">
+                        @if (currentUser) {
                         <li>
                             <button class="dropdown-item py-2 px-3" (click)="logout()">Logout</button>
                         </li>
+                        } @else {
+                        <li><a class="dropdown-item py-2 px-3" [routerLink]="['/login']"
+                                [routerLinkActive]="'text-danger rounded'"
+                                [routerLinkActiveOptions]="{ exact: true }">Login</a></li>
+                        <li><a class="dropdown-item py-2 px-3" [routerLink]="['/register']"
+                                [routerLinkActive]="'text-danger rounded'"
+                                [routerLinkActiveOptions]="{ exact: true }">Register</a></li>
+                        }
                     </ul>
-                    } @else {
-                    <button class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                        Account
-                    </button>
-                    <ul class="dropdown-menu p-0 w-100 mt-2">
-                        <li><a class="dropdown-item py-2 px-3" [routerLink]="['/login']">Login</a></li>
-                        <li><a class="dropdown-item py-2 px-3" [routerLink]="['/register']">Register</a></li>
-                    </ul>
-                    }
+                </li>
+                <li class="nav-item position-relative d-none d-lg-block">
+                    <a class="nav-link" style="cursor: pointer;" [routerLink]="['/cart']"
+                        [routerLinkActive]="'text-danger rounded'" [routerLinkActiveOptions]="{ exact: true }">
+                        <i class="bi bi-cart fs-5"></i>
+                        <span class="position-absolute start-100 translate-middle badge rounded-pill bg-danger">
+                            {{ cartService.getTotalItems() }}
+                        </span>
+                    </a>
+                    <div class="dropdown-menu p-3 cart-dropdown" style="right: 0; min-width: 200px;">
+                        <p class="mb-2">Items in cart: {{ cartService.getTotalItems() }}</p>
+                        <a class="btn btn-primary btn-sm w-100" [routerLink]="['/cart']">Go to Cart</a>
+                    </div>
                 </li>
             </ul>
         </div>
