--- a/src/app/components/landing-section/landing-section.component.html
+++ b/src/app/components/landing-section/landing-section.component.html
@@ -1,12 +1,10 @@
-<div class="container py-5">
+<div class="container pb-5 pt-3">
     <div class="row mt-3 mb-5">
         <div class="col-md-4 d-flex align-items-center">
             <div>
-                <h1 class="mt-1 mb-3">Tell Your Story to the World</h1>
+                <h2 class="mt-1 mb-3 fw-bold" style="font-size: 60px;">Dress to Impress with Our Latest Styles</h2>
                 <p class="fw-lighter">
-                    Join with us! Login or Register. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Delectus,
-                    ex!
+                    Join with us! Login or Register. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque debitis perferendis dolorem nam minima.
                 </p>
             </div>
         </div>
