--- a/src/app/components/shop-main/shop-main.component.css
+++ b/src/app/components/shop-main/shop-main.component.css
@@ -1,6 +1,6 @@
 h6 {
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 25px;
     font-weight: 400;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
