--- a/src/app/components/todo-table/todo-table.component.html
+++ b/src/app/components/todo-table/todo-table.component.html
@@ -13,7 +13,7 @@
             @for (todo of todos; track $index) {
             <tr>
                 <td>{{ $index + 1 }}</td>
-                <td [class.text-decoration-line-through]="todo.completed">{{ todo.text }}</td>
+                <td [class.text-decoration-line-through]="todo.completed">{{ todo.task }}</td>
                 <td>
                     <input type="checkbox" class="form-check-input" [checked]="todo.completed"
                         (change)="onComplete($index)" />
