--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center align-items-center vh-100">
+<div class="container d-flex justify-content-center align-items-center my-5">
     <div class="card p-4 shadow" style="min-width: 350px; max-width: 400px; width: 100%;">
         <h2 class="text-center mb-4">Login</h2>
 
