--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -38,13 +38,19 @@
                     </div>
 
                     <div class="d-flex gap-3">
-                        <button class="btn btn-primary px-4 py-2" [ngClass]="{ 'disabled': productData.quantity === 0 }">
-                            Add to Cart
+                        <button class="btn btn-primary px-4 py-2" [ngClass]="{ 'disabled': productData.quantity === 0 }"
+                            (click)="addToCart()">
+                            <i class="bi bi-cart-plus fs-4 me-3"></i> <span class="fs-5">Add to Cart</span>
                         </button>
                         <button class="btn btn-outline-secondary px-4 py-2" [routerLink]="['/products']">
-                            Back to Products
+                            <span class="fs-5"><i class="bi bi-arrow-left fs-4 me-1"></i> Back to Products</span>
                         </button>
                     </div>
+                    @if (showAddedMessage) {
+                    <p class="text-success mt-2 mb-0">
+                        Product added to cart {{ addCount }} time{{ addCount === 1 ? '' : 's' }}!
+                    </p>
+                    }
                 </div>
             </div>
         </div>
