--- a/src/app/pages/products/size-category/size-category.component.html
+++ b/src/app/pages/products/size-category/size-category.component.html
@@ -5,7 +5,7 @@
         }
     </select>
 
-    <select class="form-select w-25" [(ngModel)]="selectedSize">
+    <select class="form-select w-25 my-sm-3 my-lg-0 my-md-0" [(ngModel)]="selectedSize">
         @for (size of sizes; track size) {
         <option [value]="size">{{ size | titlecase }}</option>
         }
